# PRM_Genetico

./: CMakeLists.txt  Makefile  README.md
executables/: main.cpp  main_age.cpp  main_agg.cpp  main_shade.cpp  main_vis_graph.cpp
inc/: age.hpp  agg.hpp  bitmap.hpp  chromosome.hpp  constants.hpp  imageES.hpp  point.hpp  prm_utilities.hpp  shade.hpp  type_point.hpp
include/: bitmap.hpp  chromosome.hpp  point.hpp  type_point.hpp  utilities.hpp
log/: latest_list
maps/: room1.pgm  room1_inflated.pgm  room1_smoothed.pgm  room2.pgm  room2_inflated.pgm  room2_smoothed.pgm  room3.pgm  room3_inflated.pgm  room3_smoothed.pgm  room4.pgm  room4_inflated.pgm  room4_inverted.pgm  room4_smoothed.pgm
results/: age_1_6.txt  age_2_10.txt  age_3_12.txt  age_4_7.txt  agg_1_6.txt  agg_2_10.txt  agg_3_12.txt  agg_4_7.txt  shade_1_6.txt  shade_2_10.txt  shade_3_12.txt  shade_4_7.txt  vis_1_6.txt  vis_2_10.txt  vis_3_12.txt  vis_4_7.txt
src/: age.cpp  agg.cpp  bitmap.cpp  check_groups.py  chromosome.cpp  create_tables.py  imageES.cpp  point.cpp  prm_utilities.cpp  shade.cpp  utilities.cpp
tables/: estilo.css  results_tables.html
test/: fitness_test.cpp  test.cpp
tests/: CMakeLists.txt  fitness_test.cpp  test.cpp
